# dj-set-prep-workflow

./: .gitignore  LICENSE  README.md  essentia_energy.py  generate_metadata_report.py  pyproject.toml  tag_set_aiffs.py  tag_set_mp3s.py  tagging_test_bench.py  test_aif_tags.py  test_metadata_parsing.py  test_run_set_prep_flow.py  test_tag_set_matching.py  test_wav_tags.py  verify_list_info.py
Templates/: DJ Set Prep.rpp  batch-real.txt  batchconvert.txt  batchconvert_template.txt  output.render_stats.html
Templates/Backups/: DJ Set Prep-2026-02-24_055105.rpp-bak  DJ Set Prep-2026-02-24_062819.rpp-bak  DJ Set Prep-2026-02-24_081444.rpp-bak  DJ Set Prep-2026-02-25_070128.rpp-bak  DJ Set Prep-2026-02-25_073208.rpp-bak  DJ Set Prep-2026-02-25_073720.rpp-bak  DJ Set Prep-2026-02-25_074424.rpp-bak
Templates/peaks/: input.aif.reapeaks  input.aiff.reapeaks  input.wav.reapeaks
src/dj_set_prep_workflow/: paths.py  run_set_prep_flow.py  tag_set_aiffs.py  tag_set_mp3s.py
